BackEnd/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DDP

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> instr_imprimir opcion_ptcoma
Rule 5     instruccion -> instr_imprimirln opcion_ptcoma
Rule 6     instruccion -> instr_declaracion opcion_ptcoma
Rule 7     instruccion -> instr_declaraciontipo opcion_ptcoma
Rule 8     instruccion -> instr_if opcion_ptcoma
Rule 9     instruccion -> instr_while opcion_ptcoma
Rule 10    instruccion -> instr_break opcion_ptcoma
Rule 11    instruccion -> instr_continue opcion_ptcoma
Rule 12    instruccion -> instr_for opcion_ptcoma
Rule 13    instruccion -> instr_func opcion_ptcoma
Rule 14    instruccion -> instr_llamada opcion_ptcoma
Rule 15    instruccion -> instr_return opcion_ptcoma
Rule 16    instruccion -> instr_declararreglo opcion_ptcoma
Rule 17    instruccion -> instr_copyarray opcion_ptcoma
Rule 18    instruccion -> modify_array opcion_ptcoma
Rule 19    instruccion -> instr_push opcion_ptcoma
Rule 20    instruccion -> instr_crearstruct opcion_ptcoma
Rule 21    instruccion -> isntr_asigatribstruct opcion_ptcoma
Rule 22    opcion_ptcoma -> PTCOMA
Rule 23    opcion_ptcoma -> <empty>
Rule 24    instruccion -> error PTCOMA
Rule 25    instr_imprimir -> RPRINT PARIZQ lexp PARDER
Rule 26    instr_imprimirln -> RPRINTLN PARIZQ lexp PARDER
Rule 27    lexp -> lexp COMA expresion
Rule 28    lexp -> expresion
Rule 29    instr_declaracion -> ID IGUAL expresion
Rule 30    instr_declaracion -> RLOCAL ID IGUAL expresion
Rule 31    instr_declaracion -> RLOCAL ID
Rule 32    instr_declaracion -> RGLOBAL ID
Rule 33    instr_declaracion -> RGLOBAL ID IGUAL expresion
Rule 34    instr_declaraciontipo -> ID IGUAL expresion DP tipof
Rule 35    instr_declaraciontipo -> RLOCAL ID IGUAL expresion DP tipof
Rule 36    instr_declaraciontipo -> RGLOBAL ID IGUAL expresion DP tipof
Rule 37    instr_declararreglo -> ID IGUAL CORIZQ tist CORDER
Rule 38    instr_declararreglo -> ID IGUAL CORIZQ tist CORDER DP RVECTOR LLAVEA masrvector LLAVEC
Rule 39    masrvector -> masrvector RVECTOR
Rule 40    masrvector -> frevector
Rule 41    frevector -> tipof
Rule 42    frevector -> RVECTOR LLAVEA masrvector LLAVEC
Rule 43    tist -> tist COMA fis
Rule 44    tist -> fis
Rule 45    fis -> expresion
Rule 46    fis -> CORIZQ tist CORDER
Rule 47    modify_array -> ID lista_corchetes IGUAL expresion
Rule 48    lista_corchetes -> lista_corchetes CORIZQ expresion CORDER
Rule 49    lista_corchetes -> CORIZQ expresion CORDER
Rule 50    instr_crearstruct -> RSTRUCT ID listatributes PTCOMA REND
Rule 51    instr_crearstruct -> RMUTABLE RSTRUCT ID listatributes PTCOMA REND
Rule 52    listatributes -> listatributes PTCOMA idss
Rule 53    listatributes -> idss
Rule 54    idss -> ID
Rule 55    idss -> ID DP tipof
Rule 56    isntr_asigatribstruct -> ID POINT atributospoint IGUAL expresion
Rule 57    atributospoint -> atributospoint POINT ID
Rule 58    atributospoint -> ID
Rule 59    instr_copyarray -> ID IGUAL ID CORIZQ DP CORDER
Rule 60    instr_push -> RPUSHFNA PARIZQ ID COMA lista_corchetespush PARDER
Rule 61    instr_push -> RPUSHFNA PARIZQ ID lista_corchetes COMA lista_corchetespush PARDER
Rule 62    instr_push -> RPUSHFNA PARIZQ ID COMA expresion PARDER
Rule 63    lista_corchetespush -> CORIZQ lista_corchetespush CORDER
Rule 64    lista_corchetespush -> CORIZQ lexpresionessspush CORDER
Rule 65    lexpresionessspush -> lexpresionessspush COMA expresion
Rule 66    lexpresionessspush -> expresion
Rule 67    begin_end -> CORIZQ RBEGIN DP REND CORDER
Rule 68    begin_end -> CORIZQ RBEGIN DP expresion CORDER
Rule 69    begin_end -> CORIZQ expresion DP REND CORDER
Rule 70    begin_end -> CORIZQ expresion DP expresion CORDER
Rule 71    tipof -> RNOTHING
Rule 72    tipof -> RINT
Rule 73    tipof -> RFLOATFN
Rule 74    tipof -> RBOOL
Rule 75    tipof -> RCHAR
Rule 76    tipof -> RSTRING
Rule 77    tipof -> ID
Rule 78    instr_if -> RIF expresion instrucciones REND
Rule 79    instr_if -> RIF expresion instrucciones RELSE instrucciones REND
Rule 80    instr_if -> RIF expresion instrucciones elseIfLists REND
Rule 81    elseIfLists -> RELSEIF expresion instrucciones
Rule 82    elseIfLists -> RELSEIF expresion instrucciones RELSE instrucciones
Rule 83    elseIfLists -> RELSEIF expresion instrucciones elseIfLists
Rule 84    instr_while -> RWHILE expresion instrucciones
Rule 85    instr_for -> RFOR ID RIN lexpsfor instrucciones REND
Rule 86    instr_for -> RFOR ID RIN lexpsforarray instrucciones REND
Rule 87    instr_for -> RFOR ID RIN ID instrucciones REND
Rule 88    instr_for -> RFOR ID RIN CADENA instrucciones REND
Rule 89    lexpsfor -> expresion DP expresion
Rule 90    lexpsforarray -> CORIZQ list_expss CORDER
Rule 91    list_expss -> list_expss COMA expresion
Rule 92    list_expss -> expresion
Rule 93    instr_func -> RFUNCTION ID PARIZQ params PARDER opciontipo instrucciones REND
Rule 94    instr_func -> RFUNCTION ID PARIZQ PARDER opciontipo instrucciones REND
Rule 95    opciontipo -> DP tipof
Rule 96    opciontipo -> <empty>
Rule 97    params -> params COMA param
Rule 98    params -> param
Rule 99    param -> ID
Rule 100   param -> ID DP tipof
Rule 101   param -> ID DP RVECTOR LLAVEA masrvector LLAVEC
Rule 102   instr_llamada -> ID PARIZQ PARDER
Rule 103   instr_llamada -> ID PARIZQ params_llam PARDER
Rule 104   params_llam -> params_llam COMA paramet
Rule 105   params_llam -> paramet
Rule 106   paramet -> expresion
Rule 107   instr_return -> RRETURN expresion
Rule 108   instr_break -> RBREAK
Rule 109   instr_continue -> RCONTINUE
Rule 110   expresion -> expresion MAS expresion
Rule 111   expresion -> expresion MENOS expresion
Rule 112   expresion -> expresion POR expresion
Rule 113   expresion -> expresion DIV expresion
Rule 114   expresion -> expresion MOD expresion
Rule 115   expresion -> expresion POTEN expresion
Rule 116   expresion -> expresion MAYORQ expresion
Rule 117   expresion -> expresion MENORQ expresion
Rule 118   expresion -> expresion MAYORIGUALQ expresion
Rule 119   expresion -> expresion MENORIGUALQ expresion
Rule 120   expresion -> expresion DIFERENTE expresion
Rule 121   expresion -> expresion IGUALDAD expresion
Rule 122   expresion -> expresion OR expresion
Rule 123   expresion -> expresion AND expresion
Rule 124   expresion -> MENOS expresion
Rule 125   expresion -> NOT expresion
Rule 126   expresion -> PARIZQ expresion PARDER
Rule 127   expresion -> instr_llamada
Rule 128   expresion -> RPARSEFN PARIZQ tipof COMA expresion PARDER
Rule 129   expresion -> RLENGTHFNA PARIZQ ID lista_corchetes PARDER
Rule 130   expresion -> RLENGTHFNA PARIZQ ID PARDER
Rule 131   expresion -> RLOGT PARIZQ lexp PARDER
Rule 132   expresion -> RLOG PARIZQ lexp PARDER
Rule 133   expresion -> RTRUNCFN PARIZQ tipof COMA expresion PARDER
Rule 134   expresion -> RTRUNCFN PARIZQ expresion PARDER
Rule 135   expresion -> RFLOATFN PARIZQ expresion PARDER
Rule 136   expresion -> RUPPERCASEFN PARIZQ expresion PARDER
Rule 137   expresion -> RLOWERCASEFN PARIZQ expresion PARDER
Rule 138   expresion -> ID
Rule 139   expresion -> ENTERO
Rule 140   expresion -> DECIMAL
Rule 141   expresion -> CADENA
Rule 142   expresion -> CARACTER
Rule 143   expresion -> RTRUE
Rule 144   expresion -> RFALSE
Rule 145   expresion -> RNOTHING
Rule 146   expresion -> ID lista_corchetes
Rule 147   expresion -> ID begin_end
Rule 148   expresion -> ID POINT atributospoint

Terminals, with rules where they appear

AND                  : 123
CADENA               : 88 141
CARACTER             : 142
COMA                 : 27 43 60 61 62 65 91 97 104 128 133
CORDER               : 37 38 46 48 49 59 63 64 67 68 69 70 90
CORIZQ               : 37 38 46 48 49 59 63 64 67 68 69 70 90
DDP                  : 
DECIMAL              : 140
DIFERENTE            : 120
DIV                  : 113
DP                   : 34 35 36 38 55 59 67 68 69 70 89 95 100 101
ENTERO               : 139
ID                   : 29 30 31 32 33 34 35 36 37 38 47 50 51 54 55 56 57 58 59 59 60 61 62 77 85 86 87 87 88 93 94 99 100 101 102 103 129 130 138 146 147 148
IGUAL                : 29 30 33 34 35 36 37 38 47 56 59
IGUALDAD             : 121
LLAVEA               : 38 42 101
LLAVEC               : 38 42 101
MAS                  : 110
MAYORIGUALQ          : 118
MAYORQ               : 116
MENORIGUALQ          : 119
MENORQ               : 117
MENOS                : 111 124
MOD                  : 114
NOT                  : 125
OR                   : 122
PARDER               : 25 26 60 61 62 93 94 102 103 126 128 129 130 131 132 133 134 135 136 137
PARIZQ               : 25 26 60 61 62 93 94 102 103 126 128 129 130 131 132 133 134 135 136 137
POINT                : 56 57 148
POR                  : 112
POTEN                : 115
PTCOMA               : 22 24 50 51 52
RBEGIN               : 67 68
RBOOL                : 74
RBREAK               : 108
RCHAR                : 75
RCONTINUE            : 109
RELSE                : 79 82
RELSEIF              : 81 82 83
REND                 : 50 51 67 69 78 79 80 85 86 87 88 93 94
RFALSE               : 144
RFLOATFN             : 73 135
RFOR                 : 85 86 87 88
RFUNCTION            : 93 94
RGLOBAL              : 32 33 36
RIF                  : 78 79 80
RIN                  : 85 86 87 88
RINT                 : 72
RLENGTHFNA           : 129 130
RLOCAL               : 30 31 35
RLOG                 : 132
RLOGT                : 131
RLOWERCASEFN         : 137
RMUTABLE             : 51
RNOTHING             : 71 145
RPARSEFN             : 128
RPRINT               : 25
RPRINTLN             : 26
RPUSHFNA             : 60 61 62
RRETURN              : 107
RSTRING              : 76
RSTRUCT              : 50 51
RTRUE                : 143
RTRUNCFN             : 133 134
RUPPERCASEFN         : 136
RVECTOR              : 38 39 42 101
RWHILE               : 84
error                : 24

Nonterminals, with rules where they appear

atributospoint       : 56 57 148
begin_end            : 147
elseIfLists          : 80 83
expresion            : 27 28 29 30 33 34 35 36 45 47 48 49 56 62 65 66 68 69 70 70 78 79 80 81 82 83 84 89 89 91 92 106 107 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 125 126 128 133 134 135 136 137
fis                  : 43 44
frevector            : 40
idss                 : 52 53
inicio               : 0
instr_break          : 10
instr_continue       : 11
instr_copyarray      : 17
instr_crearstruct    : 20
instr_declaracion    : 6
instr_declaraciontipo : 7
instr_declararreglo  : 16
instr_for            : 12
instr_func           : 13
instr_if             : 8
instr_imprimir       : 4
instr_imprimirln     : 5
instr_llamada        : 14 127
instr_push           : 19
instr_return         : 15
instr_while          : 9
instruccion          : 2 3
instrucciones        : 1 2 78 79 79 80 81 82 82 83 84 85 86 87 88 93 94
isntr_asigatribstruct : 21
lexp                 : 25 26 27 131 132
lexpresionessspush   : 64 65
lexpsfor             : 85
lexpsforarray        : 86
list_expss           : 90 91
lista_corchetes      : 47 48 61 129 146
lista_corchetespush  : 60 61 63
listatributes        : 50 51 52
masrvector           : 38 39 42 101
modify_array         : 18
opcion_ptcoma        : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
opciontipo           : 93 94
param                : 97 98
paramet              : 104 105
params               : 93 97
params_llam          : 103 104
tipof                : 34 35 36 41 55 95 100 128 133
tist                 : 37 38 43 46

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . instr_imprimir opcion_ptcoma
    (5) instruccion -> . instr_imprimirln opcion_ptcoma
    (6) instruccion -> . instr_declaracion opcion_ptcoma
    (7) instruccion -> . instr_declaraciontipo opcion_ptcoma
    (8) instruccion -> . instr_if opcion_ptcoma
    (9) instruccion -> . instr_while opcion_ptcoma
    (10) instruccion -> . instr_break opcion_ptcoma
    (11) instruccion -> . instr_continue opcion_ptcoma
    (12) instruccion -> . instr_for opcion_ptcoma
    (13) instruccion -> . instr_func opcion_ptcoma
    (14) instruccion -> . instr_llamada opcion_ptcoma
    (15) instruccion -> . instr_return opcion_ptcoma
    (16) instruccion -> . instr_declararreglo opcion_ptcoma
    (17) instruccion -> . instr_copyarray opcion_ptcoma
    (18) instruccion -> . modify_array opcion_ptcoma
    (19) instruccion -> . instr_push opcion_ptcoma
    (20) instruccion -> . instr_crearstruct opcion_ptcoma
    (21) instruccion -> . isntr_asigatribstruct opcion_ptcoma
    (24) instruccion -> . error PTCOMA
    (25) instr_imprimir -> . RPRINT PARIZQ lexp PARDER
    (26) instr_imprimirln -> . RPRINTLN PARIZQ lexp PARDER
    (29) instr_declaracion -> . ID IGUAL expresion
    (30) instr_declaracion -> . RLOCAL ID IGUAL expresion
    (31) instr_declaracion -> . RLOCAL ID
    (32) instr_declaracion -> . RGLOBAL ID
    (33) instr_declaracion -> . RGLOBAL ID IGUAL expresion
    (34) instr_declaraciontipo -> . ID IGUAL expresion DP tipof
    (35) instr_declaraciontipo -> . RLOCAL ID IGUAL expresion DP tipof
    (36) instr_declaraciontipo -> . RGLOBAL ID IGUAL expresion DP tipof
    (78) instr_if -> . RIF expresion instrucciones REND
    (79) instr_if -> . RIF expresion instrucciones RELSE instrucciones REND
    (80) instr_if -> . RIF expresion instrucciones elseIfLists REND
    (84) instr_while -> . RWHILE expresion instrucciones
    (108) instr_break -> . RBREAK
    (109) instr_continue -> . RCONTINUE
    (85) instr_for -> . RFOR ID RIN lexpsfor instrucciones REND
    (86) instr_for -> . RFOR ID RIN lexpsforarray instrucciones REND
    (87) instr_for -> . RFOR ID RIN ID instrucciones REND
    (88) instr_for -> . RFOR ID RIN CADENA instrucciones REND
    (93) instr_func -> . RFUNCTION ID PARIZQ params PARDER opciontipo instrucciones REND
    (94) instr_func -> . RFUNCTION ID PARIZQ PARDER opciontipo instrucciones REND
    (102) instr_llamada -> . ID PARIZQ PARDER
    (103) instr_llamada -> . ID PARIZQ params_llam PARDER
    (107) instr_return -> . RRETURN expresion
    (37) instr_declararreglo -> . ID IGUAL CORIZQ tist CORDER
    (38) instr_declararreglo -> . ID IGUAL CORIZQ tist CORDER DP RVECTOR LLAVEA masrvector LLAVEC
    (59) instr_copyarray -> . ID IGUAL ID CORIZQ DP CORDER
    (47) modify_array -> . ID lista_corchetes IGUAL expresion
    (60) instr_push -> . RPUSHFNA PARIZQ ID COMA lista_corchetespush PARDER
    (61) instr_push -> . RPUSHFNA PARIZQ ID lista_corchetes COMA lista_corchetespush PARDER
    (62) instr_push -> . RPUSHFNA PARIZQ ID COMA expresion PARDER
    (50) instr_crearstruct -> . RSTRUCT ID listatributes PTCOMA REND
    (51) instr_crearstruct -> . RMUTABLE RSTRUCT ID listatributes PTCOMA REND
    (56) isntr_asigatribstruct -> . ID POINT atributospoint IGUAL expresion

    error           shift and go to state 22
    RPRINT          shift and go to state 23
    RPRINTLN        shift and go to state 24
    ID              shift and go to state 25
    RLOCAL          shift and go to state 26
    RGLOBAL         shift and go to state 27
    RIF             shift and go to state 28
    RWHILE          shift and go to state 29
    RBREAK          shift and go to state 30
    RCONTINUE       shift and go to state 31
    RFOR            shift and go to state 32
    RFUNCTION       shift and go to state 33
    RRETURN         shift and go to state 34
    RPUSHFNA        shift and go to state 35
    RSTRUCT         shift and go to state 36
    RMUTABLE        shift and go to state 37

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    instr_imprimir                 shift and go to state 4
    instr_imprimirln               shift and go to state 5
    instr_declaracion              shift and go to state 6
    instr_declaraciontipo          shift and go to state 7
    instr_if                       shift and go to state 8
    instr_while                    shift and go to state 9
    instr_break                    shift and go to state 10
    instr_continue                 shift and go to state 11
    instr_for                      shift and go to state 12
    instr_func                     shift and go to state 13
    instr_llamada                  shift and go to state 14
    instr_return                   shift and go to state 15
    instr_declararreglo            shift and go to state 16
    instr_copyarray                shift and go to state 17
    modify_array                   shift and go to state 18
    instr_push                     shift and go to state 19
    instr_crearstruct              shift and go to state 20
    isntr_asigatribstruct          shift and go to state 21

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . instr_imprimir opcion_ptcoma
    (5) instruccion -> . instr_imprimirln opcion_ptcoma
    (6) instruccion -> . instr_declaracion opcion_ptcoma
    (7) instruccion -> . instr_declaraciontipo opcion_ptcoma
    (8) instruccion -> . instr_if opcion_ptcoma
    (9) instruccion -> . instr_while opcion_ptcoma
    (10) instruccion -> . instr_break opcion_ptcoma
    (11) instruccion -> . instr_continue opcion_ptcoma
    (12) instruccion -> . instr_for opcion_ptcoma
    (13) instruccion -> . instr_func opcion_ptcoma
    (14) instruccion -> . instr_llamada opcion_ptcoma
    (15) instruccion -> . instr_return opcion_ptcoma
    (16) instruccion -> . instr_declararreglo opcion_ptcoma
    (17) instruccion -> . instr_copyarray opcion_ptcoma
    (18) instruccion -> . modify_array opcion_ptcoma
    (19) instruccion -> . instr_push opcion_ptcoma
    (20) instruccion -> . instr_crearstruct opcion_ptcoma
    (21) instruccion -> . isntr_asigatribstruct opcion_ptcoma
    (24) instruccion -> . error PTCOMA
    (25) instr_imprimir -> . RPRINT PARIZQ lexp PARDER
    (26) instr_imprimirln -> . RPRINTLN PARIZQ lexp PARDER
    (29) instr_declaracion -> . ID IGUAL expresion
    (30) instr_declaracion -> . RLOCAL ID IGUAL expresion
    (31) instr_declaracion -> . RLOCAL ID
    (32) instr_declaracion -> . RGLOBAL ID
    (33) instr_declaracion -> . RGLOBAL ID IGUAL expresion
    (34) instr_declaraciontipo -> . ID IGUAL expresion DP tipof
    (35) instr_declaraciontipo -> . RLOCAL ID IGUAL expresion DP tipof
    (36) instr_declaraciontipo -> . RGLOBAL ID IGUAL expresion DP tipof
    (78) instr_if -> . RIF expresion instrucciones REND
    (79) instr_if -> . RIF expresion instrucciones RELSE instrucciones REND
    (80) instr_if -> . RIF expresion instrucciones elseIfLists REND
    (84) instr_while -> . RWHILE expresion instrucciones
    (108) instr_break -> . RBREAK
    (109) instr_continue -> . RCONTINUE
    (85) instr_for -> . RFOR ID RIN lexpsfor instrucciones REND
    (86) instr_for -> . RFOR ID RIN lexpsforarray instrucciones REND
    (87) instr_for -> . RFOR ID RIN ID instrucciones REND
    (88) instr_for -> . RFOR ID RIN CADENA instrucciones REND
    (93) instr_func -> . RFUNCTION ID PARIZQ params PARDER opciontipo instrucciones REND
    (94) instr_func -> . RFUNCTION ID PARIZQ PARDER opciontipo instrucciones REND
    (102) instr_llamada -> . ID PARIZQ PARDER
    (103) instr_llamada -> . ID PARIZQ params_llam PARDER
    (107) instr_return -> . RRETURN expresion
    (37) instr_declararreglo -> . ID IGUAL CORIZQ tist CORDER
    (38) instr_declararreglo -> . ID IGUAL CORIZQ tist CORDER DP RVECTOR LLAVEA masrvector LLAVEC
    (59) instr_copyarray -> . ID IGUAL ID CORIZQ DP CORDER
    (47) modify_array -> . ID lista_corchetes IGUAL expresion
    (60) instr_push -> . RPUSHFNA PARIZQ ID COMA lista_corchetespush PARDER
    (61) instr_push -> . RPUSHFNA PARIZQ ID lista_corchetes COMA lista_corchetespush PARDER
    (62) instr_push -> . RPUSHFNA PARIZQ ID COMA expresion PARDER
    (50) instr_crearstruct -> . RSTRUCT ID listatributes PTCOMA REND
    (51) instr_crearstruct -> . RMUTABLE RSTRUCT ID listatributes PTCOMA REND
    (56) isntr_asigatribstruct -> . ID POINT atributospoint IGUAL expresion

    $end            reduce using rule 1 (inicio -> instrucciones .)
    error           shift and go to state 22
    RPRINT          shift and go to state 23
    RPRINTLN        shift and go to state 24
    ID              shift and go to state 25
    RLOCAL          shift and go to state 26
    RGLOBAL         shift and go to state 27
    RIF             shift and go to state 28
    RWHILE          shift and go to state 29
    RBREAK          shift and go to state 30
    RCONTINUE       shift and go to state 31
    RFOR            shift and go to state 32
    RFUNCTION       shift and go to state 33
    RRETURN         shift and go to state 34
    RPUSHFNA        shift and go to state 35
    RSTRUCT         shift and go to state 36
    RMUTABLE        shift and go to state 37

    instruccion                    shift and go to state 38
    instr_imprimir                 shift and go to state 4
    instr_imprimirln               shift and go to state 5
    instr_declaracion              shift and go to state 6
    instr_declaraciontipo          shift and go to state 7
    instr_if                       shift and go to state 8
    instr_while                    shift and go to state 9
    instr_break                    shift and go to state 10
    instr_continue                 shift and go to state 11
    instr_for                      shift and go to state 12
    instr_func                     shift and go to state 13
    instr_llamada                  shift and go to state 14
    instr_return                   shift and go to state 15
    instr_declararreglo            shift and go to state 16
    instr_copyarray                shift and go to state 17
    modify_array                   shift and go to state 18
    instr_push                     shift and go to state 19
    instr_crearstruct              shift and go to state 20
    isntr_asigatribstruct          shift and go to state 21

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RPRINTLN        reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RLOCAL          reduce using rule 3 (instrucciones -> instruccion .)
    RGLOBAL         reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RPUSHFNA        reduce using rule 3 (instrucciones -> instruccion .)
    RSTRUCT         reduce using rule 3 (instrucciones -> instruccion .)
    RMUTABLE        reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    REND            reduce using rule 3 (instrucciones -> instruccion .)
    RELSE           reduce using rule 3 (instrucciones -> instruccion .)
    RELSEIF         reduce using rule 3 (instrucciones -> instruccion .)
    PTCOMA          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> instr_imprimir . opcion_ptcoma
    (22) opcion_ptcoma -> . PTCOMA
    (23) opcion_ptcoma -> .

  ! shift/reduce conflict for PTCOMA resolved as shift
    PTCOMA          shift and go to state 40
    error           reduce using rule 23 (opcion_ptcoma -> .)
    RPRINT          reduce using rule 23 (opcion_ptcoma -> .)
    RPRINTLN        reduce using rule 23 (opcion_ptcoma -> .)
    ID              reduce using rule 23 (opcion_ptcoma -> .)
    RLOCAL          reduce using rule 23 (opcion_ptcoma -> .)
    RGLOBAL         reduce using rule 23 (opcion_ptcoma -> .)
    RIF             reduce using rule 23 (opcion_ptcoma -> .)
    RWHILE          reduce using rule 23 (opcion_ptcoma -> .)
    RBREAK          reduce using rule 23 (opcion_ptcoma -> .)
    RCONTINUE       reduce using rule 23 (opcion_ptcoma -> .)
    RFOR            reduce using rule 23 (opcion_ptcoma -> .)
    RFUNCTION       reduce using rule 23 (opcion_ptcoma -> .)
    RRETURN         reduce using rule 23 (opcion_ptcoma -> .)
    RPUSHFNA        reduce using rule 23 (opcion_ptcoma -> .)
    RSTRUCT         reduce using rule 23 (opcion_ptcoma -> .)
    RMUTABLE        reduce using rule 23 (opcion_ptcoma -> .)
    $end            reduce using rule 23 (opcion_ptcoma -> .)
    REND            reduce using rule 23 (opcion_ptcoma -> .)
    RELSE           reduce using rule 23 (opcion_ptcoma -> .)
    RELSEIF         reduce using rule 23 (opcion_ptcoma -> .)

  ! PTCOMA          [ reduce using rule 23 (opcion_ptcoma -> .) ]

    opcion_ptcoma                  shift and go to state 39

state 5

    (5) instruccion -> instr_imprimirln . opcion_ptcoma
    (22) opcion_ptcoma -> . PTCOMA
    (23) opcion_ptcoma -> .

  ! shift/reduce conflict for PTCOMA resolved as shift
    PTCOMA          shift and go to state 40
    error           reduce using rule 23 (opcion_ptcoma -> .)
    RPRINT          reduce using rule 23 (opcion_ptcoma -> .)
    RPRINTLN        reduce using rule 23 (opcion_ptcoma -> .)
    ID              reduce using rule 23 (opcion_ptcoma -> .)
    RLOCAL          reduce using rule 23 (opcion_ptcoma -> .)
    RGLOBAL         reduce using rule 23 (opcion_ptcoma -> .)
    RIF             reduce using rule 23 (opcion_ptcoma -> .)
    RWHILE          reduce using rule 23 (opcion_ptcoma -> .)
    RBREAK          reduce using rule 23 (opcion_ptcoma -> .)
    RCONTINUE       reduce using rule 23 (opcion_ptcoma -> .)
    RFOR            reduce using rule 23 (opcion_ptcoma -> .)
    RFUNCTION       reduce using rule 23 (opcion_ptcoma -> .)
    RRETURN         reduce using rule 23 (opcion_ptcoma -> .)
    RPUSHFNA        reduce using rule 23 (opcion_ptcoma -> .)
    RSTRUCT         reduce using rule 23 (opcion_ptcoma -> .)
    RMUTABLE        reduce using rule 23 (opcion_ptcoma -> .)
    $end            reduce using rule 23 (opcion_ptcoma -> .)
    REND            reduce using rule 23 (opcion_ptcoma -> .)
    RELSE           reduce using rule 23 (opcion_ptcoma -> .)
    RELSEIF         reduce using rule 23 (opcion_ptcoma -> .)

  ! PTCOMA          [ reduce using rule 23 (opcion_ptcoma -> .) ]

    opcion_ptcoma                  shift and go to state 41

state 6

    (6) instruccion -> instr_declaracion . opcion_ptcoma
    (22) opcion_ptcoma -> . PTCOMA
    (23) opcion_ptcoma -> .

  ! shift/reduce conflict for PTCOMA resolved as shift
    PTCOMA          shift and go to state 40
    error           reduce using rule 23 (opcion_ptcoma -> .)
    RPRINT          reduce using rule 23 (opcion_ptcoma -> .)
    RPRINTLN        reduce using rule 23 (opcion_ptcoma -> .)
    ID              reduce using rule 23 (opcion_ptcoma -> .)
    RLOCAL          reduce using rule 23 (opcion_ptcoma -> .)
    RGLOBAL         reduce using rule 23 (opcion_ptcoma -> .)
    RIF             reduce using rule 23 (opcion_ptcoma -> .)
    RWHILE          reduce using rule 23 (opcion_ptcoma -> .)
    RBREAK          reduce using rule 23 (opcion_ptcoma -> .)
    RCONTINUE       reduce using rule 23 (opcion_ptcoma -> .)
    RFOR            reduce using rule 23 (opcion_ptcoma -> .)
    RFUNCTION       reduce using rule 23 (opcion_ptcoma -> .)
    RRETURN         reduce using rule 23 (opcion_ptcoma -> .)
    RPUSHFNA        reduce using rule 23 (opcion_ptcoma -> .)
    RSTRUCT         reduce using rule 23 (opcion_ptcoma -> .)
    RMUTABLE        reduce using rule 23 (opcion_ptcoma -> .)
    $end            reduce using rule 23 (opcion_ptcoma -> .)
    REND            reduce using rule 23 (opcion_ptcoma -> .)
    RELSE           reduce using rule 23 (opcion_ptcoma -> .)
    RELSEIF         reduce using rule 23 (opcion_ptcoma -> .)

  ! PTCOMA          [ reduce using rule 23 (opcion_ptcoma -> .) ]

    opcion_ptcoma                  shift and go to state 42

state 7

    (7) instruccion -> instr_declaraciontipo . opcion_ptcoma
    (22) opcion_ptcoma -> . PTCOMA
    (23) opcion_ptcoma -> .

  ! shift/reduce conflict for PTCOMA resolved as shift
    PTCOMA          shift and go to state 40
    error           reduce using rule 23 (opcion_ptcoma -> .)
    RPRINT          reduce using rule 23 (opcion_ptcoma -> .)
    RPRINTLN        reduce using rule 23 (opcion_ptcoma -> .)
    ID              reduce using rule 23 (opcion_ptcoma -> .)
    RLOCAL          reduce using rule 23 (opcion_ptcoma -> .)
    RGLOBAL         reduce using rule 23 (opcion_ptcoma -> .)
    RIF             reduce using rule 23 (opcion_ptcoma -> .)
    RWHILE          reduce using rule 23 (opcion_ptcoma -> .)
    RBREAK          reduce using rule 23 (opcion_ptcoma -> .)
    RCONTINUE       reduce using rule 23 (opcion_ptcoma -> .)
    RFOR            reduce using rule 23 (opcion_ptcoma -> .)
    RFUNCTION       reduce using rule 23 (opcion_ptcoma -> .)
    RRETURN         reduce using rule 23 (opcion_ptcoma -> .)
    RPUSHFNA        reduce using rule 23 (opcion_ptcoma -> .)
    RSTRUCT         reduce using rule 23 (opcion_ptcoma -> .)
    RMUTABLE        reduce using rule 23 (opcion_ptcoma -> .)
    $end            reduce using rule 23 (opcion_ptcoma -> .)
    REND            reduce using rule 23 (opcion_ptcoma -> .)
    RELSE           reduce using rule 23 (opcion_ptcoma -> .)
    RELSEIF         reduce using rule 23 (opcion_ptcoma -> .)

  ! PTCOMA          [ reduce using rule 23 (opcion_ptcoma -> .) ]

    opcion_ptcoma                  shift and go to state 43

state 8

    (8) instruccion -> instr_if . opcion_ptcoma
    (22) opcion_ptcoma -> . PTCOMA
    (23) opcion_ptcoma -> .
